--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,4 +1,10 @@
-﻿<!DOCTYPE html>
+﻿@page
+@model IndexModel
+@{
+    ViewData["Title"] = "Home page";
+}
+
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
