--- a/HotelASP.NET/Pages/Index.cshtml
+++ b/HotelASP.NET/Pages/Index.cshtml
@@ -68,7 +68,7 @@
         <h2 class="section-title">Habitaciones Destacadas</h2>
         <div class="rooms-grid">
             <div class="room-card">
-                <div class="room-img"></div>
+                <div class="room-img" style="background-image: url('images/room1.jpg');"></div>
                 <div class="room-info">
                     <h3>Suite Ejecutiva</h3>
                     <p>Lujo y confort en una experiencia única</p>
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="room-card">
-                <div class="room-img"></div>
+                <div class="room-img" style="background-image: url('images/room2.jpg');"></div>
                 <div class="room-info">
                     <h3>Habitación Deluxe</h3>
                     <p>Espaciosa y elegante para tu descanso</p>
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="room-card">
-                <div class="room-img"></div>
+                <div class="room-img" style="background-image: url('images/room3.jpg');"></div>
                 <div class="room-info">
                     <h3>Suite Familiar</h3>
                     <p>Perfecta para vacaciones en familia</p>
