implementacion de pagina de destinos

--- a/HotelASP.NET/Pages/Index.cshtml
+++ b/HotelASP.NET/Pages/Index.cshtml
@@ -108,7 +108,7 @@
                 <ul>
                     <li><a href="#">Reservaciones</a></li>
                     <li><a href="#">Ofertas Especiales</a></li>
-                    <li><a href="#">Destinos Populares</a></li>
+                    <li><a href="/Destinos">Destinos Populares</a></li>
                     <li><a href="#">Contacto</a></li>
                 </ul>
             </div>
