--- a/HotelASP.NET/wwwroot/css/site.css
+++ b/HotelASP.NET/wwwroot/css/site.css
@@ -31,16 +31,15 @@ header {
     align-items: center;
 }
 
-
 .logo {
     color: white;
     font-size: 1.8rem;
     font-weight: bold;
 }
 
-.logo span {
-    color: #e74c3c;
-}
+    .logo span {
+        color: #e74c3c;
+    }
 
 nav ul {
     display: flex;
@@ -206,6 +205,43 @@ nav a {
 
     .book-btn:hover {
         background-color: #2980b9;
+    }
+
+/* Destinos Populares */
+.destinations-list {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+    padding: 2rem;
+}
+
+.destination-card {
+    background: white;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+    text-align: center;
+    width: 300px;
+}
+
+    .destination-card img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+        border-bottom: 1px solid #ddd;
+        border-radius: 10px 10px 0 0;
+    }
+
+    .destination-card h2 {
+        color: #2c3e50;
+        margin: 1rem 0;
+    }
+
+    .destination-card p {
+        padding: 0 1rem;
+        font-size: 1rem;
+        color: #7f8c8d;
     }
 
 /* Footer */
