--- a/HotelASP.NET/Pages/Index.cshtml
+++ b/HotelASP.NET/Pages/Index.cshtml
@@ -105,9 +105,9 @@
                 <h4>Enlaces Rápidos</h4>
                 <ul>
                     <li><a href="#">Reservaciones</a></li>
-                    <li><a href="#">Ofertas Especiales</a></li>
+                    <li><a href="/Ofertas_Especiales">Ofertas Especiales</a></li>
                     <li><a href="/Destinos">Destinos Populares</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="/Contactos#">Contacto</a></li>
                 </ul>
             </div>
             <div class="footer-section">
