Fix de margin-top para cards de Ofertas

--- a/HotelASP.NET/Pages/Ofertas_Especiales.cshtml
+++ b/HotelASP.NET/Pages/Ofertas_Especiales.cshtml
@@ -108,7 +108,7 @@
         </nav>
     </header>
 
-    <section class="offer-container">
+    <section class="offer-container" style="margin-top: 80px;">
         <div class="offer-card">
             <h3>Escapada a la Playa</h3>
             <p>Disfruta de un fin de semana en la playa con un 40% de descuento</p>
