--- a/HotelASP.NET/Pages/Destinos.cshtml
+++ b/HotelASP.NET/Pages/Destinos.cshtml
@@ -18,7 +18,7 @@
             <div class="logo">Easy<span>Rever</span>Hotels</div>
             <nav>
                 <ul>
-                    <li><a href="#inicio">Inicio</a></li>
+                    <li><a href="/">Inicio</a></li>
                     <li><a href="#habitaciones">Habitaciones</a></li>
                     <li><a href="#servicios">Servicios</a></li>
                     <li><a href="#contacto">Contacto</a></li>
