--- a/HotelASP.NET/Pages/Login.cshtml
+++ b/HotelASP.NET/Pages/Login.cshtml
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EasyReverHotels - Iniciar Sesión</title>
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/Login.css" />
 
 </head>
 <body>
