Diseños Css clientes todo

--- a/HotelASP.NET/Pages/Destinos.cshtml
+++ b/HotelASP.NET/Pages/Destinos.cshtml
@@ -13,36 +13,8 @@
     <title>Destinos Populares - EasyReverHotels</title>
     <script src="~/js/parallax.js"></script>
     <script src="~/js/prlxbackground.js"></script>
-    <style>
-        body {
-            background-color: #ecf0f1;
-            font-size: 1rem;
-            line-height: 1.5;
-            position: relative;
-        }
-
-        .parallax-background {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100vh;
-            background: url('/images/city.jpg') center/cover no-repeat;
-            z-index: -1;
-        }
-
-        .destinations-title {
-            text-align: center;
-            font-size: 2.5rem;
-            font-weight: bolder;
-            color: #fff;
-            margin-top: 120px;
-        }
-
-        .destinations-list {
-            margin-top: 50px;
-        }
-    </style>
+    <link rel="stylesheet" href="~/css/DestinosPopulares.css" />
+    
 </head>
 <body>
     <div class="parallax-background"></div>
